added necessary files

--- a/Project-StarterCodes/Project3-ReconstructPCO2/notebooks/Project3_Data.ipynb
+++ b/Project-StarterCodes/Project3-ReconstructPCO2/notebooks/Project3_Data.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "a80f2b2c-3e4c-4ce3-a977-c822989b3e67",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# **Data Acquisition and Preprocessing**\n",
     "\n",
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b37add44-d2ae-4e76-bc1a-effea1531dc2",
    "metadata": {
     "scrolled": true
@@ -38,7 +40,21 @@
    "execution_count": 3,
    "id": "d42d82f8-8400-459b-890c-f8ebfc9799e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1745426875.025685      79 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1745426875.032186      79 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1745426875.049566      79 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1745426875.049583      79 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1745426875.049586      79 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1745426875.049588      79 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n"
+     ]
+    }
+   ],
    "source": [
     "%%capture\n",
     "### standard imports ###\n",
@@ -240,18 +256,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "883bd38a-5fc4-4f49-859f-16b2fe704e61",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleted: leap-persistent/Mukkke/pco2_residual\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import gcsfs\n",
     "\n",
@@ -365,26 +373,42 @@
     }
    ],
    "source": [
-    "### creating pandas dataframes out of \"raw\" data to prep for ML ###\n",
+    "# Load and process ENSO data (OUTSIDE LOOP)\n",
+    "enso_lines = open('/home/jovyan/LEAPCourse-Climate-Pred-Project3/Project-StarterCodes/Project3-ReconstructPCO2/notebooks/nina34.txt', 'r').readlines()\n",
+    "enso_data = []\n",
+    "\n",
+    "for line in enso_lines[1:]:\n",
+    "    parts = line.strip().split()\n",
+    "    if len(parts) == 13:\n",
+    "        year = int(parts[0])\n",
+    "        for month_idx, anomaly in enumerate(parts[1:], start=1):\n",
+    "            try:\n",
+    "                val = float(anomaly)\n",
+    "                date = pd.Timestamp(year=year, month=month_idx, day=1)\n",
+    "                enso_data.append({'time': date, 'nino34': val})\n",
+    "            except:\n",
+    "                continue\n",
+    "\n",
+    "nino_df = pd.DataFrame(enso_data).set_index('time')\n",
+    "nino_df = nino_df.loc[\"2004-01-01\":\"2023-12-31\"]\n",
+    "\n",
+    "# Create ML input dataframes\n",
     "N_time = len(dates)\n",
     "member_counter = 0 \n",
     "\n",
-    "### loop through each ESM\n",
     "for ens, mem_list in selected_mems_dict.items(): \n",
-    "\n",
-    "    ### loop through each member of that ESM\n",
     "    for member in mem_list:\n",
-    "        \n",
     "        print(f'making dataframe {member_counter}: {ens,member}')\n",
     "\n",
-    "        ### uses utility function file to make data into dataframe for ML use\n",
     "        df = supporting_functions.create_inputs(ensemble_dir, ens, member, dates, N_time,\n",
-    "                                  xco2_path,\n",
-    "                                  socat_path,\n",
-    "                                  topo_path,\n",
-    "                                  lsmask_path)\n",
+    "                                                xco2_path, socat_path, topo_path, lsmask_path)\n",
     "\n",
-    "        ### Save the pandas dataframe to workspace\n",
+    "        # Merge ENSO\n",
+    "        df = df.reset_index()\n",
+    "        df['time'] = pd.to_datetime(df['time'])\n",
+    "        df = df.merge(nino_df, on='time', how='left')\n",
+    "        df = df.set_index(['time', 'ylat', 'xlon'])\n",
+    "\n",
     "        supporting_functions.save_clean_data(df, MLinputs_path, ens, member, dates)\n",
     "        member_counter += 1"
    ]
@@ -400,12 +424,16 @@
      "output_type": "stream",
      "text": [
       "ACCESS-ESM1-5 member_r5i1p1f1\n",
+      "leap-persistent/Mukkke/pco2_residual/post01_xgb_inputs/ACCESS-ESM1-5/member_r5i1p1f1/MLinput_ACCESS-ESM1-5_r5i1p1f1_mon_1x1_200401_202312.parquet\n",
       "leap-persistent/Mukkke/pco2_residual/post01_xgb_inputs/ACCESS-ESM1-5/member_r5i1p1f1/MLinput_ACCESS-ESM1-5_r5i1p1f1_mon_1x1_200401_202312.pkl\n",
       "ACCESS-ESM1-5 member_r1i1p1f1\n",
+      "leap-persistent/Mukkke/pco2_residual/post01_xgb_inputs/ACCESS-ESM1-5/member_r1i1p1f1/MLinput_ACCESS-ESM1-5_r1i1p1f1_mon_1x1_200401_202312.parquet\n",
       "leap-persistent/Mukkke/pco2_residual/post01_xgb_inputs/ACCESS-ESM1-5/member_r1i1p1f1/MLinput_ACCESS-ESM1-5_r1i1p1f1_mon_1x1_200401_202312.pkl\n",
       "ACCESS-ESM1-5 member_r10i1p1f1\n",
+      "leap-persistent/Mukkke/pco2_residual/post01_xgb_inputs/ACCESS-ESM1-5/member_r10i1p1f1/MLinput_ACCESS-ESM1-5_r10i1p1f1_mon_1x1_200401_202312.parquet\n",
       "leap-persistent/Mukkke/pco2_residual/post01_xgb_inputs/ACCESS-ESM1-5/member_r10i1p1f1/MLinput_ACCESS-ESM1-5_r10i1p1f1_mon_1x1_200401_202312.pkl\n",
       "ACCESS-ESM1-5 member_r31i1p1f1\n",
+      "leap-persistent/Mukkke/pco2_residual/post01_xgb_inputs/ACCESS-ESM1-5/member_r31i1p1f1/MLinput_ACCESS-ESM1-5_r31i1p1f1_mon_1x1_200401_202312.parquet\n",
       "leap-persistent/Mukkke/pco2_residual/post01_xgb_inputs/ACCESS-ESM1-5/member_r31i1p1f1/MLinput_ACCESS-ESM1-5_r31i1p1f1_mon_1x1_200401_202312.pkl\n",
       "ACCESS-ESM1-5 member_r2i1p1f1\n",
       "leap-persistent/Mukkke/pco2_residual/post01_xgb_inputs/ACCESS-ESM1-5/member_r2i1p1f1/MLinput_ACCESS-ESM1-5_r2i1p1f1_mon_1x1_200401_202312.pkl\n",
@@ -451,6 +479,39 @@
     "        for file in files:\n",
     "            print(file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3cd86fb3-afdf-4869-8968-7bd99796b04f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nino34 in DataFrame? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test after saving (can run anywhere)\n",
+    "test_ens = \"ACCESS-ESM1-5\"\n",
+    "test_member = \"member_r10i1p1f1\"\n",
+    "test_path = f\"{MLinputs_path}/{test_ens}/{test_member}/MLinput_{test_ens}_{test_member.split('_')[-1]}_mon_1x1_{init_date}_{fin_date}.pkl\"\n",
+    "\n",
+    "with fs.open(test_path, 'rb') as f:\n",
+    "    df = pd.read_pickle(f)\n",
+    "    print(\"nino34 in DataFrame?\", 'nino34' in df.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04d13d64-7e13-4bc5-b632-b06fb52efa52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -469,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
